Fixes and code cleanup on mobile

--- a/src/sections/Navigation.scss
+++ b/src/sections/Navigation.scss
@@ -162,7 +162,7 @@ nav {
   list-style: none;
   margin-inline-start: 0;
   text-align: right;
-  animation: hideToRight 0.5s ease-in-out forwards;
+  transform: translateX(-100%);
   animation-delay: 0.7s;
 
   .you-are-here {
@@ -190,6 +190,11 @@ nav {
   }
 
   li {
+    font-family: "Cabinet Grotesk", sans-serif;
+    font-size: 3rem;
+    margin-block: 1rem;
+    opacity: 0;
+
     &:first-of-type {
       opacity: 1;
       animation: goBackUp 0.5s ease-in-out forwards;
@@ -209,7 +214,6 @@ nav {
 
     &:nth-of-type(4) {
       opacity: 1;
-
       animation: goBackUp 0.5s ease-in-out forwards;
       animation-delay: 0.3s;
     }
@@ -249,23 +253,48 @@ nav {
         opacity: 0;
         animation: goFromDown 0.5s ease-in-out forwards;
         animation-delay: 0.6s;
-      }
-
-      &:nth-of-type(5) {
-        opacity: 0;
-        animation: goFromDown 0.5s ease-in-out forwards;
-        animation-delay: 0.7s;
         font-size: 2rem;
         margin-top: 5rem;
       }
     }
   }
 
-  li {
-    font-family: "Cabinet Grotesk", sans-serif;
-    font-size: 3rem;
-    margin-block: 1rem;
-    opacity: 0;
+  &.closing {
+    animation: hideToRight 0.5s ease-in-out forwards;
+
+    li {
+      &:first-of-type {
+        opacity: 1;
+        animation: goFromDown 0.5s ease-in-out forwards;
+        animation-delay: 0.3s;
+      }
+
+      &:nth-of-type(2) {
+        opacity: 1;
+        animation: goFromDown 0.5s ease-in-out forwards;
+        animation-delay: 0.4s;
+      }
+
+      &:nth-of-type(3) {
+        opacity: 1;
+        animation: goFromDown 0.5s ease-in-out forwards;
+        animation-delay: 0.5s;
+      }
+
+      &:nth-of-type(4) {
+        opacity: 1;
+        animation: goFromDown 0.5s ease-in-out forwards;
+        animation-delay: 0.6s;
+      }
+
+      &:nth-of-type(5) {
+        opacity: 1;
+        animation: goFromDown 0.5s ease-in-out forwards;
+        animation-delay: 0.7s;
+        font-size: 2rem;
+        margin-top: 5rem;
+      }
+    }
   }
 }
 
